2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/alarm-notify/alarm-notify-dialog.c:
	(add_alarm_to_notified_alarms_dialog):
	* gui/alarm-notify/alarm-queue.c: (remove_queued_alarm),
	(open_alarm_dialog), (menu_item_toggle_callback), (populate):
	* gui/alarm-notify/alarm.c: (pop_alarm), (alarm_remove):
	* gui/alarm-notify/config-data.c:
	(config_data_replace_string_list):
	* gui/cal-search-bar.c: (regen_query):
	* gui/calendar-view-factory.c:
	* gui/calendar-view.c:
	* gui/comp-editor-factory.c: (edit_existing),
	(resolve_pending_requests), (impl_editExisting), (impl_editNew):
	* gui/control-factory.c:
	* gui/dialogs/cal-attachment-select-file.c:
	(comp_editor_select_file_attachments):
	* gui/dialogs/calendar-setup.c: (eccp_get_source_type):
	* gui/dialogs/comp-editor.c: (comp_editor_class_init),
	(commit_all_fields), (delete_event_cb), (editor_key_press_event),
	(menu_file_save_cb), (menu_file_close_cb), (make_icon_from_comp),
	(comp_editor_focus), (needs_send_cb):
	* gui/dialogs/delete-comp.c: (delete_component_dialog):
	* gui/dialogs/e-delegate-dialog.c:
	* gui/dialogs/event-editor.c:
	* gui/dialogs/event-page.c: (event_page_fill_widgets),
	(popup_delete_cb), (list_key_press):
	* gui/dialogs/meeting-page.c: (remove_clicked_cb),
	(popup_delete_cb), (button_press_event), (list_key_press),
	(meeting_page_construct):
	* gui/dialogs/memo-editor.c: (init_widgets),
	(memo_editor_set_e_cal), (memo_editor_edit_comp),
	(memo_editor_send_comp):
	* gui/dialogs/memo-page.c:
	* gui/dialogs/recurrence-page.c: (fill_exception_widgets),
	(exception_add_cb):
	* gui/dialogs/schedule-page.c: (clear_widgets),
	(schedule_page_fill_component):
	* gui/dialogs/task-details-page.c:
	(task_details_page_fill_timezones), (complete_date_changed):
	* gui/dialogs/task-editor.c:
	* gui/dialogs/task-page.c: (task_page_fill_widgets),
	(popup_delete_cb), (list_key_press):
	* gui/e-alarm-list.c: (get_alarm_string):
	* gui/e-cal-component-memo-preview.c: (write_html):